# learn_words

./: .gitignore  Cargo.toml  build_web.sh  copy_web.sh  ideas.md  learn_words.todo  video.md
docs/: audio.js  gl.js  index.html  learn_words.js  learn_words.wasm  learn_words_bg.wasm
src/: main.rs  quad_storage.rs
