[package]
name = "learn_words"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
macroquad = "0.3.3"
egui-macroquad = "0.4.0"
glam = { version = "0.13.0", features = ["serde"] }
serde = "1.0.124"
ron = "0.6.4"
egui = "0.12.0"
fasteval = "0.2.4"
quad-url = "0.1.0"
egui_demo_lib = "0.12.0"
