[package]
name = "learn_words"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
macroquad = "0.3.7"
egui-macroquad = "0.5.0"
serde = "1.0.124"
ron = "0.6.4"
egui = "0.13.1"
srtparse = "0.2.0"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
color-backtrace = "0.5.0"
